# sql_fuser

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/duckdb_builder/: composite_table.py  query.py
src/duckdb_builder/query/: abstract_query.py  delete.py  insert.py  select.py  update.py
src/sql_fusion/: __init__.py  composite_table.py  operators.py
src/sql_fusion/query/: __init__.py  abstract_query.py  delete.py  insert.py  select.py  sets.py  update.py
tests/: conftest.py  test_alias_queries.py  test_binary_expression_queries.py  test_cte_queries.py  test_delete_queries.py  test_distinct_queries.py  test_duckdb.py  test_func_queries.py  test_group_by_queries.py  test_insert_queries.py  test_integration_sqlite3_filters.py  test_join_queries.py  test_limit_offset_queries.py  test_order_by_queries.py  test_set_queries.py  test_subquery_queries.py  test_update_queries.py
