[project]
name = "sql_fusion"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Mastermind-U", email = "rex49513@gmail.com" }]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
sql_fuser = "sql_fuser:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true
config-settings = { editable_mode = "compat" }
default-groups = ["linters", "test"]

[dependency-groups]
linters = ["mypy>=1.19.1", "ruff>=0.15.8"]
test = ["duckdb>=1.5.1", "pytest>=9.0.2"]


[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
show_column_numbers = true
pretty = true
warn_unreachable = true
color_output = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py314"
line-length = 79
output-format = "grouped"
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "A",
    "D",
    "UP",
    "ANN",
    "ASYNC",
    "S",
    "B",
    "COM",
    "CPY",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RET",
    "SLF",
    "SIM",
    "TC",
    "ARG",
    "FIX",
    "T20",
    "ERA",
    "PL",
    "DOC",
    "RUF",
    "RUF100",
    "SLF001",
    "COM812",
]

ignore = [
    "SLF001",   # allow using self in static methods for copy()
    "N801",     # allow lowercase class names
    "D105",
    "D102",
    "D104",
    "D203",
    "D213",
    "D301",
    "UP017",
    "UP034",
    "UP035",
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN401",
    "ASYNC109",
    "ASYNC230",
    "S311",
    "B904",
    "TC001",
    "TC002",
    "TC003",
    "SIM101",
    "B905",
    "D107",
    "D101",
    "D103",
    "D100",
]

extend-select = []

fixable = ["ALL"]
unfixable = [
    "T20", # dont auto delete print/pprint lines in code
]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "PLR2004"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["sql_fusion"]
split-on-trailing-comma = false
combine-as-imports = true

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
